--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,33 @@
     --title-text-color:#212121;
     --accent-color:#2196F3;
     --logo-head-color:#000000;
+    --border-header: 1px solid #ECECEC;
     --white-color:#ffffff;
     --bg-hero:#2F303A;
     --footer-link-color: rgba(255, 255, 255, 0.6);
     --button-bg-color:#F5F4FA;
+    --button-hero-focus: #188CE8;
+    --team-list-gap: 30px;
+    --team-list-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    --filter-button-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    --works-list-gap: 30px;
+    --works-list-top-gap: 30px;
+    --works-list-border: 1px solid #EEEEEE;
+
+    }
+html {
+    box-sizing: border-box;
 }
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
 body {
     color:var(--primary-text-color);
     font-family: 'Roboto', 'Verdana', sans-serif;
@@ -15,6 +37,35 @@ body {
     letter-spacing: 0.03em;
     background-color: var(--white-color);
 }
+img {
+    display:block;
+    max-width:100%;
+}
+/* Общие стили */
+.list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.container {
+    width:1200px;
+    padding-left:15px;
+    padding-right:15px;
+    margin:0 auto;
+}
+/* Логотип */
 .logo {
     color:var(--accent-color);
     font-family: 'Raleway', sans-serif;
@@ -28,10 +79,30 @@ body {
     color:var(--logo-head-color);
 }
 /* Навигация сайта */
-.list {
-    list-style: none;
+.header {
+    border-bottom: var(--border-header);
+}
+.main-header {
+    display: flex;
+    align-items:center;
+}
+.main-nav {
+    display:flex;
+    align-items: center;
+}
+
+.site-nav {
+    display:flex;
+    margin-left: 93px;
+}
+
+.site-nav .item + .item {
+    margin-left: 50px;
 }
 .site-nav .link {
+    display: block;
+    padding: 32px 0;
+
     color:var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -42,7 +113,13 @@ body {
 .site-nav .link:hover, .site-nav .link:focus, .site-nav .active-link {
     color: var(--accent-color);
 }
-
+.contact-nav {
+    display:flex;
+    margin-left: auto;
+}
+.contact-nav .item + .item {
+    margin-left: 50px;
+}
 .contact-nav .link {
     color:var(--primary-text-color);
     text-decoration: none;
@@ -53,21 +130,31 @@ body {
 }
 
 .contact-nav .link:hover, .contact-nav .link:focus {
-        color: var(--accent-color);
+    color: var(--accent-color);
 }
 
 /* Секция Герой */
 .hero {
     background-color: var(--bg-hero);
+    text-align: center;
+    padding:200px 0;
+    min-width:1200px;
 }
+
 .hero-title {
     color:var(--white-color);
     font-weight: 900;
     font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
+    line-height: 1.3636;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+
+    width: 696px;
+    margin-top:0;
+    margin-bottom:30px;
+    margin-right:auto;
+    margin-left:auto;  
+   
 }
 .hero-button {
     font-family: inherit;
@@ -77,13 +164,17 @@ body {
     line-height: 1.88;
     text-align: center;
     letter-spacing: 0.06em;
-    background: #2196F3;
+    background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: 0;
     border-radius: 4px;
     cursor:pointer;
+    padding:10px 32px;
 }
 
+.hero-button:hover, .hero-button:focus {
+    background: var(--button-hero-focus);
+}
 /* Все секции */
 .section-title {
     color:var(--title-text-color);
@@ -91,38 +182,108 @@ body {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 50px;
 }
-
+.section {
+    padding: 94px 0;
+}
 /* Секция Наши преимущества */
+.feature-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.feature-list .item {
+    width: 270px;
+}
+.feature-list .item+.item {
+    margin-left: 30px;
+}
 .feature-list .title {
     color:var(--title-text-color);
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 .feature-list .text {
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 1.7142;
+
+    margin-top: 0;
+    margin-bottom: 0;
+}
+/* Секция Чем мы занимаемся */
+ .section.work {
+    padding-top: 0;
+ }
+.work-list {
+    display:flex;
+}
+.work-list .item {
+    margin-right:30px;
+}
+.work-list .item:nth-child(3n) {
+    margin-right:0;
 }
 
 /* Секция Наша команда */
+.section.team {
+    background-color: var(--button-bg-color);
+}
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.team-list>.item {
+    background-color:var(--white-color);
+    margin-right: 30px;
+    flex-basis: calc((100% - var(--team-list-gap)*3)/4);
+    box-shadow: var(--team-list-shadow);
+    border-radius: 0px 0px 4px 4px;
+    overflow: hidden;
+}
+
+.team-list>.item:nth-child(4n) {
+    margin-right: 0;
+}
+.team-list img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 .team-list .name {
     color:var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-    text-align: center;
+    
+    margin-top: 0;
+    margin-bottom:10px;
 }
 .team-list .profession {
     font-size: 16px;
     line-height: 1.19;
+    
+    margin-top:0;
+    margin-bottom:0;
+}
+.team-descr {
+    padding:30px 0;
     text-align: center;
 }
-
 /* Секция Футер */
 .footer {
     background-color:var(--bg-hero);
+    padding: 60px 0;
+    min-width: 1200px;
+}
+.logo-footer {
+    display: inline-block;
+    margin-bottom:20px;
 }
 .logo-white {
     color:var(--white-color);
@@ -132,6 +293,11 @@ body {
     color: var(--white-color);
     font-size: 14px;
     line-height: 1.71;
+    margin-top: 0;
+    margin-bottom: 9px;
+}
+.bottom {
+    margin-bottom: 9px;
 }
 .footer-contacts .link {
     color: var(--footer-link-color);
@@ -146,6 +312,11 @@ body {
 }
 
 /* Фильтр в Портфолио */
+.filter {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+}
  .filter-button {
     color: var(--title-text-color);
     background-color: var(--button-bg-color);
@@ -157,28 +328,42 @@ body {
     border: 0;
     border-radius: 4px;
     cursor: pointer;
+    padding: 6px 22px;
+}
+.filter .item:not(:last-child) {
+    margin-right: 8px;
 }
 .filter-button:hover, .filter-button:focus {
     color: var(--white-color);
     background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: var(--filter-button-shadow);
 }
-/*
-.filter .normal-button, .filter .active-button:hover, .filter .active-button:focus {
-    color: var(--title-text-color);
-    background-color: var(--button-bg-color);
-}
-.filter .active-button, .filter .normal-button:hover, .filter .normal-button:focus {
-    color: var(--white-color);
-    background-color: var(--accent-color);
-
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-*/
 
 /* Секция Наши работы */
+.works-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--works-list-top-gap));
+}
+.works-list>.item {
+    margin-right: 30px;
+    flex-basis: calc((100% - var(--works-list-gap)*2)/3);
+    margin-top: var(--works-list-top-gap);
+    margin-right: var(--works-list-gap);
+    
+}
+.works-list>.item:nth-child(3n) {
+    margin-right: 0;
+}
 .works-list .link {
     text-decoration: none;
+}
+.works-list .item-content {
+    padding: 20px 24px;
+    background: var(--white-color);
+    border-right: var(--works-list-border);
+    border-bottom: var(--works-list-border);
+    border-left: var(--works-list-border);
 }
 .works-list .title {
     color:var(--title-text-color);
@@ -186,10 +371,14 @@ body {
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
+    margin-top: 0;
+    margin-bottom: 4px;
+
     
 }
 .works-list .type {
     font-size: 16px;
     line-height: 1.88;
     color: var(--primary-text-color);
+    margin: 0;
 }
